--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
-<script type="importmap">
-  {
-    "imports": {
-      "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
-      "axios": "https://unpkg.com/axios/dist/axios.min.js"
-    }
-  }
-</script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+<script src="https://cdn.staticfile.org/axios/0.18.0/axios.min.js"></script>
 
 <div id="app">{{ message }}</div>
 
 <script type="module">
-import { createApp } from 'vue'
-import axios from 'axios'
+const { createApp } = Vue
 
 createApp({
-  data() {
-    return {
-      message: 'Hello Vue!'
-    }
-  },
-  
-  created() {
-    axios
-      .get('https://www.runoob.com/try/ajax/json_demo.json')
-      .then(response => (this.message = response))
-      .catch(function (error) { // 请求失败处理
-        console.log(error)
-      })
+data() {
+  return {
+    message: 'Hello Vue!'
   }
+},
+
+created() {
+  axios
+    .get('https://api.ghser.com/random/pe.php')
+    .then(response => (this.message = response))
+    .catch(function (error) { // 请求失败处理
+      console.log(error)
+    })
+}
 
 }).mount('#app')
 
